--- a/docker-compose-registry.yml
+++ b/docker-compose-registry.yml
@@ -7,12 +7,20 @@ services:
     ports:
       - 82:80
     environment:
-      - NGINX_PROXY_PASS_URL=pozos-registry-server:5000
       - SINGLE_REGISTRY=true
       - REGISTRY_TITLE=Docker Registry UI
       - DELETE_IMAGES=true
       - SHOW_CONTENT_DIGEST=true
+      - NGINX_PROXY_PASS_URL=http://pozos-registry-server:5000
+      - SHOW_CATALOG_NB_TAGS=true
+      - CATALOG_MIN_BRANCHES=1
+      - CATALOG_MAX_BRANCHES=1
+      - TAGLIST_PAGE_SIZE=100
+      - REGISTRY_SECURED=false
+      - CATALOG_ELEMENTS_LIMIT=1000
     container_name: registry-ui
+    depends_on:
+     - registry-server
     networks:
       - pozos_reg.network
 
