--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,12 @@
 version: '3.8'
 services:
     api:
-        build:
-           context: .
-           dockerfile: ./simple_api/Dockerfile
         ports:
             - 5000:5000
         container_name: studentlist_api
         volumes:
             - ./simple_api/student_age.json:/data/student_age.json
-        image: api_image
+        image: api.student_list.img
         networks:
            - studentlist_network
 
